--- a/sanxing.json
+++ b/sanxing.json
@@ -19,7 +19,7 @@
 		"sanxing": false,
 		"google": false,
 		"oppo": false,
-		"other": true,
+		"other": false,
 		"huawei": false,
 		"honor": false,
 		"meizu": false,
